Fix loading animation on mobile safari

--- a/client/styles/loading.import.styl
+++ b/client/styles/loading.import.styl
@@ -10,42 +10,14 @@
     position absolute
     font-size 8em
     color $secondary
+    animation spinner 1.2s ease-in-out infinite
     @extend .font-awesome
-    animation spinner
-    animation-duration 1.2s
-    animation-iteration-count infinite
-    animation-timing-function ease-in-out
 
-@-webkit-keyframes spinner {
-  0% {
-    transform rotate3d(0,0,1,0deg)
-  }
-  100% {
-    transform rotate3d(0,0,1,360deg)
-  }
-}
-
-@-moz-keyframes spinner {
-  0% {
-    transform rotate3d(0,0,1,0deg)
-  }
-  100% {
-    transform rotate3d(0,0,1,360deg)
-  }
-}
-@-o-keyframes spinner {
-  0% {
-    transform rotate3d(0,0,1,0deg)
-  }
-  100% {
-    transform rotate3d(0,0,1,360deg)
-  }
-}
 @keyframes spinner {
   0% {
-    transform rotate3d(0,0,1,0deg)
+    transform rotate(0deg)
   }
   100% {
-    transform rotate3d(0,0,1,360deg)
+    transform rotate(360deg)
   }
 }
